# SD-Latent-Interposer

./: .gitignore  README.md  __init__.py  comfy_latent_interposer.py  dataset.py  interposer.py  log_loss.py  preprocess_images.py  preprocess_latents.py  pyproject.toml  train.py  utils.py  vae.py
config/: ca-to-v1.yaml  ca-to-v3.yaml  ca-to-xl.yaml  fx-to-v1.yaml  fx-to-v3.yaml  fx-to-xl.yaml  v1-to-v3.yaml  v1-to-xl.yaml  v3-to-v1.yaml  v3-to-xl.yaml  xl-to-v1.yaml  xl-to-v3.yaml
