[project]
name = "sd-latent-interposer"
description = "Custom node to convert the lantents between SDXL and SD v1.5 directly without the VAE decoding/encoding step."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/city96/SD-Latent-Interposer"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "SD-Latent-Interposer"
Icon = ""
